# libnotify.net

./: .gitignore  .travis.yml  README.md  libnotify.net.csproj  project.json
Classes/: Icons.cs  NativeMethods.cs  Notification.cs
c/: Makefile  Makefile.in  configure.ac  notification.c  notification.h
